# E2EE_Windows

./: .gitattributes  .gitignore  2026-1-2性能优化_1.txt  README.md
client/: CMakeLists.txt  README.md  client_config.example.ini  demo_client.cpp
client/fuzz/: CMakeLists.txt  fuzz_file_blob_v2.cpp
client/include/: auth_service.h  chat_history_store.h  client_config.h  client_core.h  config_service.h  dpapi_util.h  e2ee_engine.h  endpoint_hardening.h  file_blob.h  group_call_media_adapter.h  group_call_session.h  media_crypto.h  media_jitter_buffer.h  media_pipeline.h  media_service.h  media_session.h  media_transport.h  messaging_service.h  payload_padding.h  secure_store_util.h  security_service.h  storage_service.h  sync_service.h  transport_service.h  trust_store.h
client/src/: chat_history_store.cpp  client_config.cpp  client_core.cpp  dpapi_util.cpp  e2ee_engine.cpp  endpoint_hardening.cpp  group_call_media_adapter.cpp  group_call_session.cpp  media_crypto.cpp  media_jitter_buffer.cpp  media_pipeline.cpp  media_session.cpp
client/tests/: CMakeLists.txt  client_config_media_test.cpp  client_config_tls_test.cpp  client_trust_store_test.cpp  device_sync_ratchet_test.cpp  e2ee_engine_test.cpp  group_call_key_test.cpp  media_crypto_keyid_test.cpp  media_crypto_test.cpp  platform_fs_lock_test.cpp  sdk_c_api_e2e_test.cpp  sdk_c_api_event_test.cpp  sdk_c_api_friend_test.cpp  sdk_c_api_status_test.cpp  sdk_c_api_version_test.cpp
client/ui/: CMakeLists.txt  main.cpp  media_transport_capi.h  qml_main.cpp  quick_client.cpp  quick_client.h  widget_main.cpp
client/ui/common/: ChatInputEdit.cpp  ChatInputEdit.h  EmojiPackManager.cpp  EmojiPackManager.h  FramelessWindowBase.cpp  FramelessWindowBase.h  IconButton.cpp  IconButton.h  ImeLanguagePackManager.cpp  ImeLanguagePackManager.h  ImePluginApi.h  ImePluginLoader.cpp  ImePluginLoader.h  OverlayWidget.cpp  OverlayWidget.h  SecureClipboard.cpp  SecureClipboard.h  SettingsDialog.cpp  SettingsDialog.h  Theme.cpp  Theme.h  Toast.cpp  Toast.h  UiIcons.cpp  UiIcons.h  UiRuntimePaths.cpp  UiRuntimePaths.h  UiSettings.cpp  UiSettings.h  UiStyle.cpp  UiStyle.h  ui_resources.qrc
client/ui/data/: emoji.json  third_party_ime_licenses.json
client/ui/e2ee_chat_empty/: CMakeLists.txt  main.cpp
client/ui/e2ee_group_chat/: CMakeLists.txt  GroupChatWindow.cpp  main.cpp
client/ui/e2ee_login/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  main.cpp
client/ui/e2ee_main_list/: AuthFlowWidget.cpp  AuthFlowWidget.h  BackendAdapter.cpp  BackendAdapter.h  CMakeLists.txt  CallController.cpp  CallController.h  CallDialog.cpp  CallDialog.h  CallInviteUtils.h  ChatWindow.cpp  ChatWindow.h  ConversationDetailsDialog.cpp  EmojiPickerDialog.cpp  EmojiPickerDialog.h  LoginDialog.cpp  LoginDialog.h  MainListWindow.cpp  MainListWindow.h  MessageDelegate.cpp  MessageModel.cpp  MessageModel.h  NotificationCenterDialog.cpp  NotificationCenterDialog.h  TrustPromptDialog.cpp  TrustPromptDialog.h  main.cpp
client/ui/ime_rime/: CMakeLists.txt  FetchRime.cmake  RimeImePlugin.cpp  RimePrecompile.cpp
client/ui/launcher/: UiLauncher.cpp
client/ui/qml/: AppStore.qml  I18n.qml  Main.qml  Style.qml  qmldir
client/ui/qq_chat_empty/: CMakeLists.txt  ChatEmptyWindow.cpp  ChatEmptyWindow.h  main.cpp
client/ui/qq_group_chat/: CMakeLists.txt  GroupChatWindow.cpp  GroupChatWindow.h  main.cpp
client/ui/qq_login/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  main.cpp
client/ui/qq_main_list/: BackendAdapter.cpp  BackendAdapter.h  CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  ConversationDetailsDialog.h  LoginDialog.cpp  LoginDialog.h  MainListWindow.cpp  MainListWindow.h  MessageDelegate.cpp  MessageDelegate.h  MessageModel.cpp  MessageModel.h  TrustPromptDialog.cpp  main.cpp
client/ui/qss/: app.qss
client/ui/widgets/: chat_window.cpp  chat_window.h  conversation_item.cpp  conversation_item.h  image_preview_dialog.cpp  image_preview_dialog.h  list_window.cpp  list_window.h  login_dialog.cpp  login_dialog.h  main_window.cpp  theme.h  (+7 more)
server/: CMakeLists.txt  config.example.ini
server/fuzz/: CMakeLists.txt  fuzz_frame_decode.cpp
server/include/: api_service.h  auth_provider.h  c_api.h  config.h  connection_handler.h  crypto.h  frame.h  frame_router.h  group_call_manager.h  group_directory.h  group_manager.h  kcp_server.h  key_transparency.h  listener.h  media_relay.h  metadata_protector.h  network_server.h  offline_storage.h  pake.h  protected_store.h  protocol.h  secure_channel.h  server_app.h  session_manager.h  state_store.h  state_store_mysql.h
server/src/: api_service.cpp  api_service_helpers.h  auth_provider.cpp  c_api.cpp  config.cpp  connection_handler.cpp  crypto.cpp  crypto_random.cpp  frame.cpp  frame_router.cpp  group_call_manager.cpp  group_directory.cpp  group_manager.cpp  kcp_server.cpp  key_transparency.cpp  listener.cpp  main.cpp  media_relay.cpp  metadata_protector.cpp  network_server.cpp  offline_storage.cpp  pake.cpp  protected_store.cpp  protocol.cpp  secure_channel.cpp  server_app.cpp  server_launcher.cpp  session_manager.cpp  state_store_mysql.cpp
server/tests/: CMakeLists.txt  api_service_test.cpp  c_api_login_test.cpp  c_api_test.cpp  config_test.cpp  connection_handler_test.cpp  crypto_test.cpp  frame_test.cpp  friend_request_test.cpp  friend_test.cpp  group_call_manager_test.cpp  group_call_signal_test.cpp  group_cipher_test.cpp  group_directory_test.cpp  group_manager_test.cpp  group_notice_test.cpp  key_transparency_test.cpp  offline_queue_test.cpp  offline_storage_test.cpp  opaque_pake_test.cpp  ops_health_test.cpp  pake_test.cpp  private_chat_test.cpp  router_test.cpp  secure_channel_test.cpp  server_app_test.cpp  session_manager_test.cpp
shard/opaque_pake/: Cargo.toml
tools/: CMakeLists.txt  build_android_openssl.sh  ime_eval.py  ime_eval_build_dataset.py  ime_eval_sample.tsv  ime_pack_tool.py  kt_keygen.cpp  kt_pubinfo.cpp  mi_e2ee_harden_acl.cmd  ops_health_view.cpp  package_posix.sh  package_windows.ps1  perf_baseline.cpp  rime_dict_prepare.py  third_party_audit.cpp  verify_package_posix.sh  verify_package_windows.ps1
(+175 files in other folders)
